# web-search-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  GOAL.md  LICENSE  README.md  TASKS.md
.cargo/: config.toml
benchmark/: README.md  RESULTS.embedder-cpu.md  RESULTS.firecrawl.md  RESULTS.sample.md  queries.sample.jsonl  urls.sample.jsonl
benchmark/firecrawl-selfhost/: .env.example  .gitignore  README.md  docker-compose.yaml
benchmark/mcpbench/: .gitignore  README.md  launch_rearm_gateway.sh  mcp_config_websearch_ours.json  package.json  rearm_gateway.mjs  verify_handshake.py  verify_two_sessions.py
config/: default.toml  source_tiers.toml
crates/benchmark/: Cargo.toml
crates/benchmark/src/: compare.rs  firecrawl.rs  lib.rs  main.rs  metrics.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  logging.rs  models.rs
crates/crawler/: Cargo.toml
crates/crawler/src/: archive.rs  browser.rs  classifier.rs  crawler.rs  feeds.rs  fetcher.rs  frontier.rs  governor.rs  lib.rs  link_extractor.rs  pagination.rs  robots.rs  search_results.rs  sitemap.rs  ssrf.rs  throttle.rs
crates/crawler/src/captcha/: capsolver.rs  cost.rs  extract.rs  inject.rs  mod.rs  twocaptcha.rs
crates/embedder/: Cargo.toml
crates/embedder/src/: candle_embedder.rs  colbert.rs  cross_encoder.rs  hash_embedder.rs  lib.rs  onnx_cross_encoder.rs  splade.rs
crates/extractor/: Cargo.toml
crates/extractor/src/: chunker.rs  consensus.rs  hydration.rs  lib.rs  metadata.rs  readability.rs  snippet.rs  trafilatura.rs
crates/extractor/tests/: large_article.rs  listing_recall.rs
crates/extractor/tests/fixtures/: blog_rust_lang.html  wikipedia_rust.html
crates/indexer/: Cargo.toml
crates/indexer/src/: dedup.rs  hnsw.rs  lib.rs  schema.rs  search.rs  simhash.rs  text_index.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: config_resolver.rs  main.rs  server.rs  tools.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: daemon.rs  engine.rs  lib.rs  persistent_cache.rs  query.rs  search_source.rs  selector.rs  streaming.rs  synthesis.rs  tavily.rs  tools.rs
crates/orchestrator/tests/: wave4_cross_cutting.rs
crates/ranker/: Cargo.toml
crates/ranker/src/: authority.rs  diversity.rs  entity_domain.rs  freshness.rs  fusion.rs  hallucination.rs  lib.rs  pipeline.rs  query_type.rs
docs/adr/: 0001-bypass-escalation-ladder.md  0002-data-layer-acquisition.md  0003-single-ip-escalation-ladder.md  0004-self-contained-deploy.md
docs/compliance/: 0001-r5-captcha-gate.md
docs/design/: 0004-stealth-and-captcha-layers.md  0005-hybrid-escalation-controller.md
docs/research/: 0001-bypass-libs.md  0002-legal-risk-mitigations.md
spike-wreq/: Cargo.toml
spike-wreq/src/: main.rs
