[package]
name = "web-search-crawler"
version.workspace = true
edition.workspace = true

[features]
default = []
browser = ["chromiumoxide"]

[dependencies]
web-search-common = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
governor = "0.8"
nonzero_ext = "0.3"
scraper = "0.21"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
parking_lot = "0.12"

# Browser support (optional)
chromiumoxide = { version = "0.7", optional = true }
