[package]
name = "web-search-crawler"
version.workspace = true
edition.workspace = true

[features]
default = []
browser = ["chromiumoxide"]

[dependencies]
web-search-common = { workspace = true }
# R0 in-band hydration salvage (Design 0005 §2.3). The extractor crate has NO
# crawler dependency, so this edge is acyclic; `hydration::extract` is a pure,
# zero-network function over a body we already hold.
web-search-extractor = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
governor = "0.8"
nonzero_ext = "0.3"
scraper = "0.21"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
parking_lot = "0.12"
moka = { workspace = true }
# Public Suffix List (Mozilla) compiled to native Rust — used to derive the
# registrable domain (eTLD+1) for governor keying (FIX #3). Embedded list, no
# runtime network/file. Dual MIT/Apache-2.0 (permissive — licensing domain OK).
psl = "2"

# Browser support (optional) — uses tokio runtime, not default async-std
chromiumoxide = { version = "0.7", optional = true, default-features = false, features = ["tokio-runtime"] }
