[package]
name = "web-search-embedder"
version.workspace = true
edition.workspace = true

[features]
default = ["candle"]
no-ml = []  # explicitly disable ML for minimal builds
onnx = ["ort"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:hf-hub", "dep:tokenizers"]

[dependencies]
web-search-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
siphasher = "1"

# ONNX Runtime (optional — requires prebuilt binaries for target platform)
ort = { version = "2.0.0-rc.12", optional = true }

# Candle: pure-Rust ML framework (optional)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
hf-hub = { version = "0.4", optional = true }
tokenizers = { version = "0.21", optional = true }
