[package]
name = "web-search-embedder"
version.workspace = true
edition.workspace = true

[features]
default = ["candle"]
no-ml = []  # explicitly disable ML for minimal builds
onnx = ["ort", "ndarray", "dep:hf-hub", "dep:tokenizers"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:hf-hub", "dep:tokenizers"]
# GPU acceleration via ONNX Runtime CUDA execution provider.
# Requires: NVIDIA GPU + CUDA 11.6+ + cuDNN installed on the system.
# Usage: cargo build --features onnx,gpu
gpu = ["onnx", "ort/cuda"]

[dependencies]
web-search-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
siphasher = "1"
# SHA-256 for mandatory models_dir checksum verification (ADR 0004 A.5).
# MIT/Apache-2.0 — permissive, compatible (licensing domain rule).
sha2 = "0.10"

# ONNX Runtime (optional — requires prebuilt binaries for target platform)
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.16", optional = true }

# Candle: pure-Rust ML framework (optional)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
hf-hub = { version = "0.4", optional = true }
tokenizers = { version = "0.21", optional = true }

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { workspace = true }
