[package]
name = "web-search-extractor"
version.workspace = true
edition.workspace = true

[dependencies]
web-search-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
scraper = "0.21"
ammonia = "4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
unicode-normalization = "0.1"
