[package]
name = "web-search-mcp-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "web-search-mcp"
path = "src/main.rs"

[dependencies]
web-search-common = { workspace = true }
web-search-orchestrator = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
