[package]
name = "web-search-mcp-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "web-search-mcp"
path = "src/main.rs"

[features]
default = []
# Enable the stealth headless (R4) path end-to-end through the orchestrator.
browser = ["web-search-orchestrator/browser"]

[dependencies]
web-search-common = { workspace = true }
web-search-orchestrator = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
