[package]
name = "web-search-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
web-search-common = { workspace = true }
web-search-crawler = { workspace = true }
web-search-extractor = { workspace = true }
web-search-indexer = { workspace = true }
web-search-embedder = { workspace = true }
web-search-ranker = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
url = { workspace = true }
