[package]
name = "web-search-ranker"
version.workspace = true
edition.workspace = true

[dependencies]
web-search-common = { workspace = true }
web-search-indexer = { workspace = true }
web-search-embedder = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dashmap = { workspace = true }
url = { workspace = true }
